Fleshing out Update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Benjamin Wong's Personal Website</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="css/freelancer.min.css" rel="stylesheet">
+    <link href="css/freelancer.css" rel="stylesheet">
 
   </head>
 
@@ -50,11 +50,28 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/profile.png" alt="">
         <div class="intro-text">
-          <span class="name">Start Bootstrap</span>
+          <table cellpadding="10">
+            <tr>
+              <td>
+                <img class="img-fluid" src="img/profpic2.png" alt=""></td>
+              <td>
+                <p align="left">Hello!</p>
+                <p align="left">My name is Benjamin Wong and this is my personal website. Feel free to take a look around to learn more about me!</p>
+              </td>
+            </tr>
+          </table>
+          <!--<div>
+            <div>
+              <img class="img-fluid" src="img/profpic2.png" alt="" height="120" width="180">
+            </div>
+            <div>
+              <p align="left">Hello!</p>
+              <p align="left">My name is Benjamin Wong and this is my personal website. Feel free to take a look around to learn more about me!</p>
+            </div>
+          </div>-->
+
           <hr class="star-light">
-          <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
         </div>
       </div>
     </header>
