--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300|Maven+Pro" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.css" rel="stylesheet">
@@ -61,8 +62,6 @@
               </td>
             </tr>
           </table>
-          <hr class="more">
-          <br>
           <!--<div>
             <div>
               <img class="img-fluid" src="img/profpic2.png" alt="" height="120" width="180">
