Fleshing out Update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <table cellpadding="10">
             <tr>
               <td>
-                <img class="img-fluid" src="img/profpic4.png" alt=""></td>
+                <img class="img-fluid2" src="img/profpic4.png" alt=""></td>
               <td>
                 <p align="left">Hello!</p>
                 <p align="left">My name is Benjamin Wong and this is my personal website. Feel free to take a look around to learn more about me!</p>
