Fleshing out Update

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.css" rel="stylesheet">
+    <link href="css/bwong.css" rel="stylesheet">
 
   </head>
 
@@ -147,14 +148,16 @@
       </div>
     </section>
 
-    <!-- About Section -->
+    <!-- Skills Section -->
     <section class="success" id="about">
       <div class="container">
         <h2 class="text-center">Skills</h2>
         <hr class="star-light">
+        <ul class="skill-icon">
+          <li><img src="img/skills/python.png" alt="Python" class="skill-logo" title="Python"></li>
+        </ul>
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            
           </div>
           <div class="col-lg-4 mr-auto">
             
