Fleshing out Update

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
         <hr class="star-light">
         <ul class="skill-icon">
           <li><img src="img/skills/python.png" alt="Python" class="skill-logo" title="Python"></li>
+          <li><img src="img/skills/java.png" alt="Java" class="skill-logo" title="Java"></li>
+          <li><img src="img/skills/cplusplus.png" alt="C++" class="skill-logo" title="C++"></li>
         </ul>
         <div class="row">
           <div class="col-lg-4 ml-auto">
