--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead">
+    <header class="masthead head-section">
       <div class="container">
         <div class="intro-text">
           <table cellpadding="10">
@@ -149,7 +149,7 @@
     </section>
 
     <!-- Skills Section -->
-    <section class="success" id="about">
+    <section class="success" id="skills">
       <div class="container">
         <h2 class="text-center">Skills</h2>
         <hr class="star-light">
