Fleshing out Update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300|Maven+Pro" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300|Maven+Pro|Dosis:500" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.css" rel="stylesheet">
@@ -168,11 +168,25 @@
       </div>
     </section>
 
+    <!-- More Section -->
+    <section id="more" class="more-section">
+      <div class="container">
+        <h2 class="text-center" style="margin-right:50%">More About Me</h2>
+        <hr style="margin-right:50%;">
+        <div class="row">
+          <p class="more-text">
+            I was born and raised in Houston, Texas as a first-generation American. I am currently a sophomore at Texas A&M - College Station and currently pursuing Computer Engineering with an emphasis on Computer Science. 
+          </p>
+          <span class="more-text">I love expanding my programming and problem solving skills, looking for any chance to learn more and create things.</span>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="success">
       <div class="container">
         <h2 class="text-center">Contact Me</h2>
-        <hr class="star-primary">
+        <hr class="star-light">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
@@ -220,61 +234,6 @@
     <!-- Footer -->
     <footer class="text-center">
       <div class="footer-above">
-        <!--
-        <div class="container">
-          <div class="row">
-            <div class="footer-col col-md-4">
-              <h3>Location</h3>
-              <p>3481 Melrose Place
-                <br>Beverly Hills, CA 90210</p>
-            </div>
-            <div class="footer-col col-md-4">
-              <h3>Around the Web</h3>
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-google-plus"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-linkedin"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-dribbble"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <div class="footer-col col-md-4">
-              <h3>About Freelancer</h3>
-              <p>Freelance is a free to use, open source Bootstrap theme created by
-                <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="footer-below">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              Copyright &copy; Your Website 2017
-            </div>
-          </div>
-        </div>
-        -->
       </div>
     </footer>
 
@@ -446,6 +405,7 @@
         </div>
       </div>
     </div>
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
