minor text changes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <hr style="margin-right:50%;">
         <div class="row">
           <p class="more-text">
-            I was born and raised in Houston, Texas as a first-generation American. I am currently a sophomore at Texas A&M - College Station and currently pursuing Computer Engineering with an emphasis on Computer Science. 
+            I was born and raised in Houston, Texas as a first-generation Asian American. I am currently a sophomore at Texas A&M - College Station and currently pursuing Computer Engineering with an emphasis on Computer Science. 
           </p>
           <span class="more-text">I love expanding my programming and problem solving skills, looking for any chance to learn more and create things.</span>
         </div>
