Fleshing out Update

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
           <li><img src="img/skills/python.png" alt="Python" class="skill-logo" title="Python"></li>
           <li><img src="img/skills/java.png" alt="Java" class="skill-logo" title="Java"></li>
           <li><img src="img/skills/cplusplus.png" alt="C++" class="skill-logo" title="C++"></li>
+          <li><img src="img/skills/matlab.png" alt="Matlab" class="skill-logo" title="Matlab"></li>
         </ul>
         <div class="row">
           <div class="col-lg-4 ml-auto">
