Fleshing out Update

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/place_holder.png" alt="">
+              <img class="img-fluid" src="img/portfolio/data-analyzer.png" alt="">
             </div>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -291,10 +291,16 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Data Analyzer</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/place_holder.png" alt="">
-                  <!--Content: To be added...-->
+                  <img class="img-fluid img-centered" src="img/portfolio/data-analyzer.png" alt="">
+                  <h5><a href="https://github.com/BenWong1097/Data-Analyzer" target="_blank">- Source Code -</a></h5>
+                  <ul align="left" style="margin-top:30px">
+                    <li>Generates statistics for any given data sets (median, mode, variance, standard deviation, etc.)</li>
+                    <li>Produces graphs to display the data sets</li>
+                    <li>Able to calculate the probability of a given data being present in a data set and vice versa</li>
+                    <li>Implemented with MATLAB</li>
+                  </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
