--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
         <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
+            <div class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/shroom-lab.png" alt="">
+            </div>
+          </div>
+          <div class="col-sm-4 portfolio-item">
             <div class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -109,16 +119,6 @@
           </div>
           <div class="col-sm-4 portfolio-item">
             <div class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/place_holder.png" alt="">
-            </div>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <div class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
@@ -161,6 +161,7 @@
           <li><img src="img/skills/java.png" alt="Java" class="skill-logo" title="Java"></li>
           <li><img src="img/skills/cplusplus.png" alt="C++" class="skill-logo" title="C++"></li>
           <li><img src="img/skills/matlab.png" alt="Matlab" class="skill-logo" title="Matlab"></li>
+          <li><img src="img/skills/javascript.png" alt="Javascript" class="skill-logo" title="Javascript"></li>
         </ul>
         <div class="row">
           <div class="col-lg-4 ml-auto">
@@ -349,10 +350,18 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>[Game Jam] Chillennium 2017: Shroom Lab</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/place_holder.png" alt="">
-                  <!--Content: To be added...-->
+                  <img class="img-fluid img-centered" src="img/portfolio/shroom-lab.png" alt="">
+                  <h5><a href="https://github.com/BenWong1097/Chillennium2017ShroomLab" target="_blank">- Source Code -</a></h5>
+                  <ul align="left" style="margin-top:30px">
+                    <li>Developed in a 48-hour game jam</li>
+                    <li>Implemented with Phaser.js</li>
+                    <li>Built with Phaser Studio</li>
+                    <li><a href="https://marooncatz.itch.io/shroom-lab" target="_blank">More info here!</a></li>
+                    <li><a href="https://shroomlab.herokuapp.com" target="_blank"><b>~Play!~</b></a></li>
+                  </ul>
+
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
