--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <!-- 
+    Hello there! Enjoying your time here? ;)
+                      ♪♫♩♬
+                   ☻/ 
+                  /▌
+                  / \ 
+  -->
   <head>
     <link rel="icon" href="img/favicon.png" type="img/png">
     <meta charset="utf-8">
