--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/place_holder.png" alt="">
+              <img class="img-fluid" src="img/portfolio/loj.png" alt="">
             </div>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -330,10 +330,14 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>[Game Jam] Chillennium 2016: Life of Joe</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/place_holder.png" alt="">
-                  <!--Content: To be added...-->
+                  <img class="img-fluid img-centered" src="img/portfolio/loj.png" alt="">
+                  <ul align="left" style="margin-top:30px">
+                    <li>Developed in a 48-hour game jam</li>
+                    <li>Built with Game Maker Studio</li>
+                    <li><a href="https://sgda1.itch.io/life-of-joe" target="_blank">More info here!</a></li>
+                  </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
