--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
             </div>
           </div>
           <div class="col-sm-4 portfolio-item">
-            <div class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
+            <!--<div class="portfolio-link" href="#portfolioModal5" data-toggle="modal">-->
+            <div class="portfolio-link" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
@@ -144,7 +145,8 @@
             </div>
           </div>
           <div class="col-sm-4 portfolio-item">
-            <div class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+            <!--<div class="portfolio-link" href="#portfolioModal6" data-toggle="modal">-->
+            <div class="portfolio-link" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
@@ -163,9 +165,9 @@
         <h2 class="text-center">Skills</h2>
         <hr class="star-light">
         <ul class="skill-icon">
+          <li><img src="img/skills/cplusplus.png" alt="C++" class="skill-logo" title="C++"></li>
           <li><img src="img/skills/python.png" alt="Python" class="skill-logo" title="Python"></li>
           <li><img src="img/skills/java.png" alt="Java" class="skill-logo" title="Java"></li>
-          <li><img src="img/skills/cplusplus.png" alt="C++" class="skill-logo" title="C++"></li>
           <li><img src="img/skills/javascript.png" alt="Javascript" class="skill-logo" title="Javascript"></li> 
           <li><img src="img/skills/matlab.png" alt="Matlab" class="skill-logo" title="Matlab"></li>
         </ul>
