Added courses and education sections; modified bootstrap css file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -175,9 +176,58 @@
           <div class="col-lg-4 ml-auto">
           </div>
           <div class="col-lg-4 mr-auto">
-            
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- Relevant Coursework -->
+    <section id="education" class="education">
+        <div class="container col-sm-5">
+          <h2 class="text-center">Coursework</h2>
+          <hr class="star-primary">
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-success justify-content-between">
+              Data Structures and Algorithms
+              <span class="badge badge-default badge-pill float-right">
+                Fall 2017
+              </span>
+            </li>
+            <li class="list-group-item">
+              Discrete Structures for Computing
+              <span class="badge badge-default badge-pill float-right">
+                Spring 2017
+              </span>
+            </li>
+            <li class="list-group-item list-group-item-success">
+            Introduction to Program Design and Concepts
+            <span class="badge badge-default badge-pill float-right">
+                Spring 2017
+              </span>
+            </li>
+          </ul>
+        </div>
+    </section>
+
+    <!-- Education -->
+    <section id="courses" class="success">
+      <div class="container col-sm-5">
+      <h2 class="text-center">Education</h2>
+      <hr class="star-light">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-success justify-content-between">
+            Texas A&M University - College Station, TX
+            <span class="badge badge-default badge-pill float-right">
+              2016-2020
+            </span>
+          </li>
+          <li class="list-group-item" style="color:#000000">
+            DeBakey High School - Houston, TX
+            <span class="badge badge-default badge-pill float-right">
+              2012-2016
+            </span>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -188,7 +238,7 @@
         <hr style="margin-right:50%;">
         <div class="row">
           <p class="more-text">
-            I was born and raised in Houston, Texas as a first-generation Asian American. I am currently a sophomore at Texas A&M - College Station and currently pursuing Computer Engineering with an emphasis on Computer Science. 
+            I was born and raised in Houston, Texas as a first-generation Asian American. I am currently a sophomore at Texas A&M - College Station and pursuing Computer Engineering with an emphasis on Computer Science. 
           </p>
           <span class="more-text">I love expanding my programming and problem solving skills, looking for any chance to learn more and create things.</span>
         </div>
