--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a class="nav-link" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills">Skills</a>
@@ -60,30 +60,11 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead head-section">
+    <header class="head-section bg-white">
       <div class="container">
-        <div class="intro-text">
-          <table cellpadding="10">
-            <tr>
-              <td>
-                <img class="img-fluid2" src="img/profpic4.png" alt=""></td>
-              <td>
+        <div class="intro-text bg2 text-white intro-section">
                 <p align="left">Hello!</p>
                 <p align="left">My name is Benjamin Wong and this is my personal website. Feel free to take a look around to learn more about me!</p>
-              </td>
-            </tr>
-          </table>
-          <!--<div>
-            <div>
-              <img class="img-fluid" src="img/profpic2.png" alt="" height="120" width="180">
-            </div>
-            <div>
-              <p align="left">Hello!</p>
-              <p align="left">My name is Benjamin Wong and this is my personal website. Feel free to take a look around to learn more about me!</p>
-            </div>
-          </div>-->
-
-          <hr class="star-light">
         </div>
       </div>
     </header>
@@ -91,7 +72,7 @@
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
       <div class="container">
-        <h2 class="text-center">Portfolio</h2>
+        <h2 class="text-center">Projects</h2>
         <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
