--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <link href="css/freelancer.css" rel="stylesheet">
     <link href="css/bwong.css" rel="stylesheet">
 
+    <!-- User scalable -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   </head>
 
   <body class="index" id="page-top">
