--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     </nav>
 
     <!-- Header -->
-    <header class="head-section bg-white">
+    <!-- <header class="head-section bg-white">
       <div class="container">
         <div class="intro-text bg2 text-white intro-section">
                 <p align="left">Hello!</p>
                 <p align="left">My name is Benjamin Wong and this is my personal website. Feel free to take a look around to learn more about me!</p>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
