--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <head>
     <link rel="icon" href="img/favicon.png" type="img/png">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <meta name="description" content="">
     <meta name="author" content="">
 
