adjusted intro media query

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Header -->
     <header class="head-section bg-white">
       <div class="container">
-        <div class="intro-text bg2 text-white intro-section">
+        <div class="bg2 text-white intro-section">
                 <p align="left">Hello!</p>
                 <p align="left">My name is Benjamin Wong and this is my personal website. Feel free to take a look around to learn more about me!</p>
         </div>
