--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#courses">Coursework</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#education">Education</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#more">About</a>
           </li>
           <li class="nav-item">
@@ -165,52 +171,56 @@
     </section>
 
     <!-- Relevant Coursework -->
-    <section id="education" class="education">
-        <div class="container col-sm-5">
+    <section id="courses">
+        <div class="container">
           <h2 class="text-center">Coursework</h2>
           <hr class="star-primary">
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-success justify-content-between">
-              Data Structures and Algorithms
+          <div class="col-sm-6 m-auto">
+            <ul class="list-group">
+              <li class="list-group-item list-group-item-success justify-content-between">
+                Data Structures and Algorithms
+                <span class="badge badge-default badge-pill float-right">
+                  Fall 2017
+                </span>
+              </li>
+              <li class="list-group-item">
+                Discrete Structures for Computing
+                <span class="badge badge-default badge-pill float-right">
+                  Spring 2017
+                </span>
+              </li>
+              <li class="list-group-item list-group-item-success">
+              Introduction to Program Design and Concepts
               <span class="badge badge-default badge-pill float-right">
-                Fall 2017
-              </span>
-            </li>
-            <li class="list-group-item">
-              Discrete Structures for Computing
-              <span class="badge badge-default badge-pill float-right">
-                Spring 2017
-              </span>
-            </li>
-            <li class="list-group-item list-group-item-success">
-            Introduction to Program Design and Concepts
-            <span class="badge badge-default badge-pill float-right">
-                Spring 2017
-              </span>
-            </li>
-          </ul>
+                  Spring 2017
+                </span>
+              </li>
+            </ul>
+          </div>
         </div>
     </section>
 
     <!-- Education -->
-    <section id="courses" class="success">
-      <div class="container col-sm-5">
-      <h2 class="text-center">Education</h2>
-      <hr class="star-light">
-        <ul class="list-group">
-          <li class="list-group-item list-group-item-success justify-content-between">
-            Texas A&M University - College Station, TX
-            <span class="badge badge-default badge-pill float-right">
-              2016-2020
-            </span>
-          </li>
-          <li class="list-group-item" style="color:#000000">
-            DeBakey High School - Houston, TX
-            <span class="badge badge-default badge-pill float-right">
-              2012-2016
-            </span>
-          </li>
-        </ul>
+    <section id="education" class="success">
+      <div class="container">
+        <h2 class="text-center">Education</h2>
+        <hr class="star-light">
+        <div class="col-sm-6 m-auto">
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-success justify-content-between">
+              Texas A&M University - College Station, TX
+              <span class="badge badge-default badge-pill float-right">
+                2016-2020
+              </span>
+            </li>
+            <li class="list-group-item" style="color:#000000">
+              DeBakey High School - Houston, TX
+              <span class="badge badge-default badge-pill float-right">
+                2012-2016
+              </span>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
