Added extra navigation in projects; added mealtime as project

--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
         <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
+            <div class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/meal-time.png" alt="">
+            </div>
+          </div>
+          <div class="col-sm-4 portfolio-item">
             <div class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -121,28 +131,6 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/loj.png" alt="">
-            </div>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <!--<div class="portfolio-link" href="#portfolioModal5" data-toggle="modal">-->
-            <div class="portfolio-link" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/place_holder.png" alt="">
-            </div>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <!--<div class="portfolio-link" href="#portfolioModal6" data-toggle="modal">-->
-            <div class="portfolio-link" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/place_holder.png" alt="">
             </div>
           </div>
         </div>
@@ -237,7 +225,6 @@
         </div>
       </div>
     </section>
-
     <!-- Contact Section -->
     <section id="contact" class="success">
       <div class="container">
@@ -315,7 +302,29 @@
                 <div class="modal-body">
                   <h2>Fiverr Buyer Request Notifier</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/fiverr.png" alt="">
+                  <div class="row">
+                    <div class="col-lg-8 m-auto">
+                      <img class="img-fluid img-centered" src="img/portfolio/fiverr.png" alt="">
+                    </div>
+                  </div>
+                  <!-- PROJECT SELECTION -->
+                  <div class="row">
+                    <div href="#portfolioModal3" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #8CD248  ">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal2" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #FF9536">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal1" class="nav-arrow2 not-active" data-dismiss="modal" data-toggle="modal" style="color: #0F9F34">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal4" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #C284C9">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
+                      ⇀
+                    </div>
+                  </div>
                   <h5><a href="https://github.com/BenWong1097/Fiverr-Buyer-Request-Notifier" target="_blank">- Source Code -</a></h5>
                   <ul align="left" style="margin-top:30px">
                     <li>Utilizes the Selenium WebDriver to notify sellers when a new buyer request is available for them</li>
@@ -345,7 +354,29 @@
                 <div class="modal-body">
                   <h2>Data Analyzer</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/data-analyzer.png" alt="">
+                  <div class="row">
+                    <div class="col-lg-8 m-auto">
+                      <img class="img-fluid img-centered" src="img/portfolio/data-analyzer.png" alt="">
+                    </div>
+                  </div>
+                  <!-- PROJECT SELECTION -->
+                  <div class="row">
+                    <div href="#portfolioModal3" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #8CD248  ">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal2" class="nav-arrow2 not-active" data-dismiss="modal" data-toggle="modal" style="color: #FF9536">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal1" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #0F9F34">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal4" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #C284C9">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
+                      ⇀
+                    </div>
+                  </div>
                   <h5><a href="https://github.com/BenWong1097/Data-Analyzer" target="_blank">- Source Code -</a></h5>
                   <ul align="left" style="margin-top:30px">
                     <li>Generates statistics for any given data sets (median, mode, variance, standard deviation, etc.)</li>
@@ -377,7 +408,29 @@
                 <div class="modal-body">
                   <h2>[Game Jam] Chillennium 2016: Life of Joe</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/loj.png" alt="">
+                  <div class="row">
+                    <div class="col-lg-8 m-auto">
+                      <img class="img-fluid img-centered" src="img/portfolio/loj.png" alt="">
+                    </div>
+                  </div>
+                  <!-- PROJECT SELECTION -->
+                  <div class="row">
+                    <div href="#portfolioModal3" class="nav-arrow2 not-active" data-dismiss="modal" data-toggle="modal" style="color: #8CD248  ">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal2" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #FF9536">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal1" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #0F9F34">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal4" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #C284C9">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
+                      ⇀
+                    </div>
+                  </div>
                   <ul align="left" style="margin-top:30px">
                     <li>Developed in a 48-hour game jam</li>
                     <li>Built with Game Maker Studio</li>
@@ -407,16 +460,37 @@
                 <div class="modal-body">
                   <h2>[Game Jam] Chillennium 2017: Shroom Lab</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/shroom-lab.png" alt="">
+                  <div class="row">
+                    <div class="col-lg-8 m-auto">
+                      <img class="img-fluid img-centered" src="img/portfolio/shroom-lab.png" alt="">
+                    </div>
+                  </div>
+                  <!-- PROJECT SELECTION -->
+                  <div class="row">
+                    <div href="#portfolioModal3" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #8CD248  ">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal2" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #FF9536">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal1" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #0F9F34">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal4" class="nav-arrow2 not-active" data-dismiss="modal" data-toggle="modal" style="color: #C284C9">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
+                      ⇀
+                    </div>
+                  </div>
                   <h5><a href="https://github.com/BenWong1097/Chillennium2017ShroomLab" target="_blank">- Source Code -</a></h5>
-                  <ul align="left" style="margin-top:30px">
+                  <ul align="left" style="margin-top:30px;">
                     <li>Developed in a 48-hour game jam</li>
                     <li>Implemented with Phaser.js</li>
                     <li>Built with Phaser Studio</li>
                     <li><a href="https://marooncatz.itch.io/shroom-lab" target="_blank">More info here!</a></li>
                     <li><a href="https://shroomlab.herokuapp.com" target="_blank"><b>~Play!~</b></a></li>
                   </ul>
-
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -439,10 +513,36 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Game: Meal Time!</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/place_holder.png" alt="">
-                  <!--Content: To be added...-->
+                  <div class="row">
+                    <div class="col-lg-8 m-auto">
+                      <img class="img-fluid img-centered" src="img/portfolio/meal-time.png" alt="">
+                    </div>
+                  </div>
+                  <!-- PROJECT SELECTION -->
+                  <div class="row">
+                    <div href="#portfolioModal3" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #8CD248  ">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal2" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #FF9536">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal1" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #0F9F34">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal4" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #C284C9">
+                      ⇀
+                    </div>
+                    <div href="#portfolioModal5" class="nav-arrow2 not-active" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
+                      ⇀
+                    </div>
+                  </div>
+                  <h5><a href="https://github.com/BenWong1097/MealTime" target="_blank">- Source Code -</a></h5>
+                  <ul align="left" style="margin-top:30px;">
+                    <li>Implemented with Create.js</li>
+                    <li><a href="https://mealtimethegame.herokuapp.com" target="_blank"><b>~Play!~</b></a></li>
+                  </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -482,7 +582,7 @@
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
@@ -495,6 +595,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
+    <script src="js/bwong.js"></script>
 
   </body>
 
