Added hover tooltips on skills

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
         <h2 class="text-center">Skills</h2>
         <hr class="star-light">
         <ul class="skill-icon">
-          <li><img src="img/skills/cplusplus.png" alt="C++" class="skill-logo" title="C++"></li>
-          <li><img src="img/skills/python.png" alt="Python" class="skill-logo" title="Python"></li>
-          <li><img src="img/skills/java.png" alt="Java" class="skill-logo" title="Java"></li>
-          <li><img src="img/skills/javascript.png" alt="Javascript" class="skill-logo" title="Javascript"></li> 
-          <li><img src="img/skills/matlab.png" alt="Matlab" class="skill-logo" title="Matlab"></li>
+          <li id="skill_cpp"><img src="img/skills/cplusplus.png" alt="C++" class="skill-logo" title="C++"></li>
+          <li id="skill_python"><img src="img/skills/python.png" alt="Python" class="skill-logo" title="Python"></li>
+          <li id="skill_java"><img src="img/skills/java.png" alt="Java" class="skill-logo" title="Java"></li>
+          <li id="skill_javascript"><img src="img/skills/javascript.png" alt="Javascript" class="skill-logo" title="Javascript"></li> 
+          <li id="skill_matlab"><img src="img/skills/matlab.png" alt="Matlab" class="skill-logo" title="Matlab"></li>
         </ul>
         <div class="row">
           <div class="col-lg-4 ml-auto">
@@ -172,12 +172,18 @@
                 </span>
               </li>
               <li class="list-group-item">
+                Intro to Digital System and Design
+                <span class="badge badge-default badge-pill float-right">
+                  Fall 2017
+                </span>
+              </li>
+              <li class="list-group-item list-group-item-success">
                 Discrete Structures for Computing
                 <span class="badge badge-default badge-pill float-right">
                   Spring 2017
                 </span>
               </li>
-              <li class="list-group-item list-group-item-success">
+              <li class="list-group-item">
               Introduction to Program Design and Concepts
               <span class="badge badge-default badge-pill float-right">
                   Spring 2017
@@ -431,11 +437,20 @@
                       ⇀
                     </div>
                   </div>
-                  <ul align="left" style="margin-top:30px">
+                  <!-- <ul align="left" style="margin-top:30px">
                     <li>Developed in a 48-hour game jam</li>
                     <li>Built with Game Maker Studio</li>
                     <li><a href="https://sgda1.itch.io/life-of-joe" target="_blank">More info here!</a></li>
-                  </ul>
+                  </ul> -->
+                  <div class="container">
+                    <h3>Life of Joe</h3>
+                    <div class="class">
+                      <h4>Type: </h4>
+                    </div>
+                    <div class="c">
+                      <h4>Type: </h4>
+                    </div>
+                  </div>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
