Back to business

--- a/index.html
+++ b/index.html
@@ -444,12 +444,17 @@
                   </ul> -->
                   <div class="container">
                     <h3>Life of Joe</h3>
-                    <div class="class">
+                  <ul align="left" style="margin-top:30px">
+                    <li>Developed in a 48-hour game jam</li>
+                    <li>Built with Game Maker Studio</li>
+                    <li><a href="https://sgda1.itch.io/life-of-joe" target="_blank">More info here!</a></li>
+                  </ul>
+                    <!--<div class="class">
                       <h4>Type: </h4>
                     </div>
                     <div class="c">
                       <h4>Type: </h4>
-                    </div>
+                    </div>-->
                   </div>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
